--- a/angular.json
+++ b/angular.json
@@ -76,7 +76,10 @@
           },
           "defaultConfiguration": "development",
           "options": {
-            "proxyConfig": "proxy.conf.json"
+            "proxyConfig": "proxy.conf.json",
+            "ssl": true,
+            "sslKey": "certs/key.pem",
+            "sslCert": "certs/cert.pem"
           }
         },
         "extract-i18n": {
